# tupleExtractor

./: README.md  pyproject.toml  seeds_positive.txt  sentences_short.txt.bz2
tupleextractor/cli/: cli.py
