[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tupleExtractor"
version = "0.0.1"
authors = ["Soike Yuan <luvusoike@icloud.com>"]
description = "Snowball: Extracting Relations from Large Plain-Text Collections"
license = "MIT"
repository = "https://github.com/sukiluvcode/tupleExtractor"

[tool.poetry.scripts]
tuplee = "tupleextractor.cli.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.16.3"
gensim = "^3.7.3"
nltk = "^3.4.1"
snowball-extractor = "1.0.5"